--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="exo_player_fragment_label">ExoPlayer Fragment</string>
 
     <!-- ExoPlayer view -->
-    <string name="error_massage">Error massage</string>
-    <string name="default_value">00:00</string>
+    <string name="exo_error_massage">Error massage</string>
+    <string name="exo_time_default_value">00:00</string>
+    <string name="exo_time_dividing_line">/</string>
 </resources>
