Add double tap rewind controller

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="exo_time_default_value">00:00</string>
     <string name="exo_time_dividing_line">/</string>
     <string name="exo_picture_in_picture_description">Picture in picture</string>
+
+    <!-- Custom view -->
+    <string name="second">секунд</string>
 </resources>
