Added dialog select video quality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,12 @@
     <string name="exo_time_default_value">00:00</string>
     <string name="exo_time_dividing_line">/</string>
     <string name="exo_picture_in_picture_description">Picture in picture</string>
+    <string name="exo_change_quality_description">Change quality</string>
+
+    <!-- ExoPlayer quality dialog -->
+    <string name="exo_quality_dialog_auto">Авто</string>
+    <string name="exo_quality_dialog_title">Качество</string>
+    <string name="exo_quality_badge">p</string>
 
     <!-- Custom view -->
     <string name="second">секунд</string>
